  existential variable now force a refinement of the goal into a
  dependent product rather than failing.

- Support for fix/cofix added in Ltac "match" and "lazymatch".

- Ltac backtraces now include trace information about tactics
  called by OCaml-defined tactics.

- Option "Ltac Debug" now applies also to terms built using Ltac functions.

- Deprecated the Implicit Tactic family of commands.

Tools

- Coq_makefile lets one override or extend the following variables from
  the command line: COQFLAGS, COQCHKFLAGS, COQDOCFLAGS.
  COQFLAGS is now entirely separate from COQLIBS, so in custom Makefiles
  $(COQFLAGS) should be replaced by $(COQFLAGS) $(COQLIBS).

Vernacular Commands

- Removed deprecated commands Arguments Scope and Implicit Arguments
  (not the option). Use the Arguments command instead.
- Nested proofs may be enabled through the option `Nested Proofs Allowed`.
  By default, they are disabled and produce an error. The deprecation
  warning which used to occur when using nested proofs has been removed.

Coq binaries and process model

- Before 8.9, Coq distributed a single `coqtop` binary and a set of
  dynamically loadable plugins that used to take over the main loop
  for tasks such as IDE language server or parallel proof checking.

  These plugins have been turned into full-fledged binaries so each
  different process has associated a particular binary now, in
  particular `coqidetop` is the CoqIDE language server, and
  `coq{proof,tactic,query}worker` are in charge of task-specific and
  parallel proof checking.

Changes from 8.8.0 to 8.8.1
===========================

Kernel

- Fix a critical bug with cofixpoints and vm_compute/native_compute (#7333).

Notations

- Fixed unexpected collision between only-parsing and only-printing
  notations (issue #7462).

Changes from 8.8+beta1 to 8.8.0
===============================

Tools

- Asynchronous proof delegation policy was fixed. Since version 8.7