@@ -25,6 +25,9 @@ Tactics
 
 - Deprecated the Implicit Tactic family of commands.
 
+- The `simple apply` tactic now respects the `Opaque` flag when called from
+  Ltac (`auto` still does not respect it).
+
 Tools
 
 - Coq_makefile lets one override or extend the following variables from
